add class notes and *CalculatorProject

--- a/Week_1/Day_2/index.html
+++ b/Week_1/Day_2/index.html
@@ -24,30 +24,38 @@
 		
 <!-- end of title section -->
 
+<h2 class="heading">Education</h2>
+<div>
+	<div class="left">
+		<p id="Organizations">
+			<strong>The Ohio State University</strong>
+		</p>
 
-	<h2 id="heading">Education</h2>
+		<p id="Positions">
+			<em>Bachelor of Science in Neuroscience – Magna Cum Laude</em>
+		</p>
 
-	<p id="Organizations">
-		<strong>The Ohio State University</strong>
-	</p>
+		<ul id="Descriptions">
+			<li>Specialization: Systems and Behavioral Neuroscience</li>
+		</ul>
+	</div>
 
-	<p id="Positions">
-		<em>Bachelor of Science in Neuroscience – Magna Cum Laude</em>
-	</p>
-
-	<ul id="Descriptions">
-		<li>Specialization: Systems and Behavioral Neuroscience</li>
-	</ul>
-
-	<div id="Data">
+	<div class="right">
 		Columbus, OH <br> 
 		May 2017 <br> 
 		GPA: 3.71 / 4.00
 	</div>
+</div>
+
+<div class="clear"></div>
+<!-- float stays active, so this command (plus
+command in css) clears the float -->
+
+
 <!-- end of education section -->					
 	<br>
 
-	<h2 id="heading">Military</h2>
+	<h2 class="heading">Military</h2>
 		<p id="Organizations">
 			<strong>Israel Defense Force</strong>
 		</p>
@@ -71,7 +79,7 @@
 
 	<br>
 
-	<h2 id="heading">Employment Experience</h2>
+	<h2 class="heading">Employment Experience</h2>
 	
 	<p id="Organizations">
 		<strong>Kenes Group</strong>
@@ -140,7 +148,7 @@
 	
 	<br>
 
-	<h2 id="heading">Publications</h2>
+	<h2 class="heading">Publications</h2>
 	
 	<ul id="Descriptions">
 		<li>Gombash Lampe et al. (2017).<strong>Systemic Gene Delivery Transduces the Enteric Nervous System of Guinea Pigs and Cynomolgus Macaques.</strong>Gene Therapy. 24. 10.1038/gt.2017.72.</li>
@@ -150,7 +158,7 @@
 <!-- end of publications section -->
 	<br>
 
-	<h2 id="heading">Languages</h2>
+	<h2 class="heading">Languages</h2>
 					
 	<ul id="Descriptions">
 		<li>Native English</li>
@@ -160,7 +168,7 @@
 		
 	<br>
 
-	<h2 id="heading">Additional Skills and Activities</h2>
+	<h2 class="heading">Additional Skills and Activities</h2>
 
 	<ul id="Descriptions">
 		<li>Python</li>
