updates left side bar to links

--- a/Week_1/day_4/exercise/wwv3/index.html
+++ b/Week_1/day_4/exercise/wwv3/index.html
@@ -17,9 +17,9 @@
 				    <h5 class="card-title">Some Favorites</h5>
 				    <p class="card-text">
 				    	<ul>
-				    		<li>Celery Root</li>
-				    		<li>Spaghetti Squash</li>
-				    		<li>Killer Mushrooms</li>
+				    		<li><a href="#">Celery Root</a></li>
+				    		<li><a href="#">Spaghetti Squash</a></li>
+				    		<li><a href="#">Killer Mushrooms</a></li>
 				    	</ul>
 				    </p>
 
@@ -79,11 +79,11 @@
   				<!-- table -->
 
 
-	  			<img src="beets.jpeg" width="250px" height="250px" class="img-thumbnail">
+	  			<img src="beets.jpeg" width="200px" height="200px" class="img-thumbnail">
 
-	  			<img src="carrots.jpeg" width="250px" height="250px" class="img-thumbnail">
-	  			
-	  			<img src="cucumbers.jpeg" width="250px" height="250px" class="img-thumbnail">
+	  			<img src="carrots.jpeg" width="200px" height="200px" class="img-thumbnail">
+
+	  			<img src="cucumbers.jpeg" width="200px" height="200px" class="img-thumbnail">
 
 
 
