--- a/Week_1/day_5/daily_challenge/index.html
+++ b/Week_1/day_5/daily_challenge/index.html
@@ -73,40 +73,70 @@
 
 	<div class="container-fluid">
 		<div class="row" id="greenbar">
-			<div class="col-2 limebox toflex">	
-				<div class= "col-12">
-					<i class="fas fa-file-medical"></i>
-					<p>Healthcare</p>
+			<div class="col-sm-4 col-md-2 limebox">	
+				<div class= "col-12 toflex">
+					<i class="fas fa-file-medical vertspacing"></i>
+				</div>
+				<div class= "col-12 toflex vertspacing">
+					Healthcare
+				</div>
+				<div class= "col-12 toflex">
+					<p>___</p>
 				</div>
 			</div>
-			<div class="col-2 limebox toflex">	
-				<div class= "col-12">
-					<i class="fas fa-car"></i>
-					<p>Automobile jobs</p>
+			<div class="col-sm-4 col-md-2 limebox">	
+				<div class= "col-12 toflex">
+					<i class="fas fa-car vertspacing"></i>
+				</div>
+				<div class="col-12 toflex vertspacing">
+					Automobiles
+				</div>
+				<div class= "col-12 toflex">
+					<p>___</p>
 				</div>
 			</div>
-			<div class="col-2 limebox toflex">	
-				<div class= "col-12">
-					<i class="fas fa-building"></i>
-					<p>Construction</p>
+			<div class="col-sm-4 col-md-2 limebox">	
+				<div class= "col-12 toflex">
+					<i class="fas fa-building vertspacing"></i>
+				</div>
+				<div class="col-12 toflex vertspacing">
+					Construction
+				</div>
+				<div class= "col-12 toflex">
+					<p>___</p>
 				</div>
 			</div>
-			<div class="col-2 limebox toflex">	
-				<div class= "col-12">
-					<i class="fas fa-utensils"></i>
-					<p>Food service</p>
+			<div class="col-sm-4 col-md-2 limebox">	
+				<div class= "col-12 toflex">
+					<i class="fas fa-utensils vertspacing"></i>
+				</div>
+				<div class="col-12 toflex vertspacing">
+					Food service
+				</div>
+				<div class= "col-12 toflex">
+					<p>___</p>
 				</div>
 			</div>
-			<div class="col-2 limebox toflex">	
-				<div class= "col-12">
-					<i class="fas fa-globe-americas"></i>
-					<p>Logistics</p>
+			<div class="col-sm-4 col-md-2 limebox">	
+				<div class= "col-12 toflex">
+					<i class="fas fa-globe-americas vertspacing"></i>
+				</div>
+				<div class="col-12 toflex vertspacing">
+					Logistics
+				</div>
+				<div class= "col-12 toflex">
+					<p>___</p>
 				</div>
 			</div>
-			<div class="col-2 limebox toflex">	
-				<div class= "col-12">
-					<i class="fas fa-money-check-alt"></i>
-					<p>Finance</p>
+			<div class="col-sm-4 col-md-2 limebox">	
+				<div class= "col-12 toflex">
+					<i class="fas fa-money-check-alt vertspacing"></i>
+				</div>
+				<div class="col-12 toflex vertspacing">
+					Finance
+				</div>
+				<div class= "col-12 toflex">
+					<p>___</p>
 				</div>
 			</div>
 		</div>
