adds side borders to green bar

--- a/Week_1/day_5/daily_challenge/index.html
+++ b/Week_1/day_5/daily_challenge/index.html
@@ -73,7 +73,7 @@
 
 	<div class="container-fluid">
 		<div class="row" id="greenbar">
-			<div class="col-sm-4 col-md-2 limebox">	
+			<div class="col-sm-4 col-md-2">	
 				<div class= "col-12 toflex">
 					<i class="fas fa-file-medical vertspacing"></i>
 				</div>
@@ -84,7 +84,7 @@
 					<p>___</p>
 				</div>
 			</div>
-			<div class="col-sm-4 col-md-2 limebox">	
+			<div class="col-sm-4 col-md-2">	
 				<div class= "col-12 toflex">
 					<i class="fas fa-car vertspacing"></i>
 				</div>
@@ -95,7 +95,7 @@
 					<p>___</p>
 				</div>
 			</div>
-			<div class="col-sm-4 col-md-2 limebox">	
+			<div class="col-sm-4 col-md-2">	
 				<div class= "col-12 toflex">
 					<i class="fas fa-building vertspacing"></i>
 				</div>
@@ -106,18 +106,18 @@
 					<p>___</p>
 				</div>
 			</div>
-			<div class="col-sm-4 col-md-2 limebox">	
+			<div class="col-sm-4 col-md-2">	
 				<div class= "col-12 toflex">
 					<i class="fas fa-utensils vertspacing"></i>
 				</div>
 				<div class="col-12 toflex vertspacing">
-					Food service
+					Dining
 				</div>
 				<div class= "col-12 toflex">
 					<p>___</p>
 				</div>
 			</div>
-			<div class="col-sm-4 col-md-2 limebox">	
+			<div class="col-sm-4 col-md-2">	
 				<div class= "col-12 toflex">
 					<i class="fas fa-globe-americas vertspacing"></i>
 				</div>
@@ -128,7 +128,7 @@
 					<p>___</p>
 				</div>
 			</div>
-			<div class="col-sm-4 col-md-2 limebox">	
+			<div class="col-sm-4 col-md-2">	
 				<div class= "col-12 toflex">
 					<i class="fas fa-money-check-alt vertspacing"></i>
 				</div>
