adds table section

--- a/Week_1/day_5/daily_challenge/index.html
+++ b/Week_1/day_5/daily_challenge/index.html
@@ -16,28 +16,28 @@
 				<div class="container" id="navigate">
 					<ul class="nav">
 					  <li class="nav-item">
-					    <a class="nav-link active" href="#">Home</a>
+					    <a class="nav-link active" href="#"><h6>Home</h6></a>
 					  </li>
 					  <li class="nav-item">
-					    <a class="nav-link" href="#">Find a job</a>
+					    <a class="nav-link" href="#"><h6>Find a job</h6></a>
 					  </li>
 					  <li class="nav-item">
-					    <a class="nav-link" href="#">Post a job</a>
+					    <a class="nav-link" href="#"><h6>Post a job</h6></a>
 					  </li>
 					  <li class="nav-item">
-					    <a class="nav-link" href="#">Pages</a>
+					    <a class="nav-link" href="#"><h6>Pages</h6></a>
 					  </li>
 					  <li class="nav-item">
-					    <a class="nav-link" href="#">Blog</a>
+					    <a class="nav-link" href="#"><h6>Blog</h6></a>
 					  </li>
 					  <li class="nav-item">
-					    <a class="nav-link" href="#">Log-in</a>
+					    <a class="nav-link" href="#"><h6>Log-in</h6></a>
 					  </li>
 					  <li class="nav-item">
-					    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Or</a>
+					    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><h6>Or</h6></a>
 					  </li>
 					  <li class="nav-item">
-					    <a class="nav-link" href="#">Register</a>
+					    <a class="nav-link" href="#"><h6>Register</h6></a>
 					  </li>
 					</ul>
 					<!-- nav ends -->
@@ -141,7 +141,54 @@
 			</div>
 		</div>
 	</div>
+	<!-- green container ends -->
 
+	<div class="container">
+		<div class="row">
+			<div class="col-12 toflex headspacing">
+				<h2>Latest Jobs</h2>
+			</div>			
+		</div>
+		<div>
+			<table class="table">
+			  <thead>
+			    <tr>
+			      <th scope="col">#</th>
+			      <th scope="col">First</th>
+			      <th scope="col">Last</th>
+			      <th scope="col">Handle</th>
+			    </tr>
+			  </thead>
+			  <tbody>
+			    <tr>
+			      <th scope="row">1</th>
+			      <td>Mark</td>
+			      <td>Otto</td>
+			      <td>@mdo</td>
+			    </tr>
+			    <tr>
+			      <th scope="row">2</th>
+			      <td>Jacob</td>
+			      <td>Thornton</td>
+			      <td>@fat</td>
+			    </tr>
+			    <tr>
+			      <th scope="row">3</th>
+			      <td>Larry</td>
+			      <td>the Bird</td>
+			      <td>@twitter</td>
+			    </tr>
+			  </tbody>
+			</table>
+		</div>
+		<!-- table ends -->
+
+		<div class="col-12 toflex">
+			<button type="button" class="btn btn-success" id="findbutton">VIEW ALL</button>
+		</div>	
+		<!-- button ends -->
+	</div>
+	<!-- latest jobs div ends -->
 
 
 
