adds Hackathon project from w3 d5

--- a/Week_3/Hackathon/index.html
+++ b/Week_3/Hackathon/index.html
@@ -3,12 +3,297 @@
 <head>
 	<title>Hackathon</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Quattrocento&display=swap" rel="stylesheet">
 </head>
 <body>
 
-	
+	<div class="question-container" id="q1">
+		<div class="question">1) I believe in a two state solution.</div>
+		<div class="answer-btn-container" id="answers_for_question1">
+			<button class="btn" name="a1" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a1" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a1" value="0">Neutral</button>
+			<button class="btn" name="a1" value="1">Moderately Agree</button>
+			<button class="btn" name="a1" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q2">
+		<div class="question"><br>2) I believe there should be public transportation on Shabbat.</div>
+		<div class="answer-btn-container" id="answers_for_question2">
+			<button class="btn" name="a2" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a2" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a2" value="0">Neutral</button>
+			<button class="btn" name="a2" value="1">Moderately Agree</button>
+			<button class="btn" name="a2" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q3">
+		<div class="question"><br>3) I believe in a completely free market.</div>
+		<div class="answer-btn-container" id="answers_for_question3">
+			<button class="btn" name="a3" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a3" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a3" value="0">Neutral</button>
+			<button class="btn" name="a3" value="1">Moderately Agree</button>
+			<button class="btn" name="a3" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q4">
+		<div class="question"><br>4) I believe marijuana should be legal.</div>
+		<div class="answer-btn-container" id="answers_for_question4">
+			<button class="btn" name="a4" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a4" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a4" value="0">Neutral</button>
+			<button class="btn" name="a4" value="1">Moderately Agree</button>
+			<button class="btn" name="a4" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q5">
+		<div class="question"><br>5) I believe all drugs should be legal.</div>
+		<div class="answer-btn-container" id="answers_for_question5">
+			<button class="btn" name="a5" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a5" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a5" value="0">Neutral</button>
+			<button class="btn" name="a5" value="1">Moderately Agree</button>
+			<button class="btn" name="a5" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q6">
+		<div class="question"><br>6) I believe teachers should be paid more.</div>
+		<div class="answer-btn-container" id="answers_for_question6">
+			<button class="btn" name="a6" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a6" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a6" value="0">Neutral</button>
+			<button class="btn" name="a6" value="1">Moderately Agree</button>
+			<button class="btn" name="a6" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q7">
+		<div class="question"><br>7) I support offensive actions made by the IDF.</div>
+		<div class="answer-btn-container" id="answers_for_question7">
+			<button class="btn" name="a7" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a7" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a7" value="0">Neutral</button>
+			<button class="btn" name="a7" value="1">Moderately Agree</button>
+			<button class="btn" name="a7" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q8">
+		<div class="question"><br>8) I believe haredim should have to serve in the army.</div>
+		<div class="answer-btn-container" id="answers_for_question8">
+			<button class="btn" name="a8" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a8" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a8" value="0">Neutral</button>
+			<button class="btn" name="a8" value="1">Moderately Agree</button>
+			<button class="btn" name="a8" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q9">
+		<div class="question"><br>9) I believe in big government.</div>
+		<div class="answer-btn-container" id="answers_for_question9">
+			<button class="btn" name="a9" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a9" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a9" value="0">Neutral</button>
+			<button class="btn" name="a9" value="1">Moderately Agree</button>
+			<button class="btn" name="a9" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q10">
+		<div class="question"><br>10) I believe prostitution should be legal.</div>
+		<div class="answer-btn-container" id="answers_for_question10">
+			<button class="btn" name="a10" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a10" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a10" value="0">Neutral</button>
+			<button class="btn" name="a10" value="1">Moderately Agree</button>
+			<button class="btn" name="a10" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q11">
+		<div class="question"><br>11) I believe schools should have more specialized programs.</div>
+		<div class="answer-btn-container" id="answers_for_question11">
+			<button class="btn" name="a11" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a11" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a11" value="0">Neutral</button>
+			<button class="btn" name="a11" value="1">Moderately Agree</button>
+			<button class="btn" name="a11" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q12">
+		<div class="question"><br>12) I believe in giving back land to Palestinians in exchange for peace.</div>
+		<div class="answer-btn-container" id="answers_for_question12">
+			<button class="btn" name="a12" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a12" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a12" value="0">Neutral</button>
+			<button class="btn" name="a12" value="1">Moderately Agree</button>
+			<button class="btn" name="a12" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q13">
+		<div class="question"><br>13) I believe all marriages should be recognized by the state of Israel.</div>
+		<div class="answer-btn-container" id="answers_for_question13">
+			<button class="btn" name="a13" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a13" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a13" value="0">Neutral</button>
+			<button class="btn" name="a13" value="1">Moderately Agree</button>
+			<button class="btn" name="a13" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q14">
+		<div class="question"><br>14) I believe there should not be state-owned businesses (ie mail, electricity, transportation, gas).</div>
+		<div class="answer-btn-container" id="answers_for_question14">
+			<button class="btn" name="a14" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a14" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a14" value="0">Neutral</button>
+			<button class="btn" name="a14" value="1">Moderately Agree</button>
+			<button class="btn" name="a14" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q15">
+		<div class="question"><br>15) I believe drugs and alcohol should be completely illegal.</div>
+		<div class="answer-btn-container" id="answers_for_question15">
+			<button class="btn" name="a15" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a15" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a15" value="0">Neutral</button>
+			<button class="btn" name="a15" value="1">Moderately Agree</button>
+			<button class="btn" name="a15" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q16">
+		<div class="question"><br>16) I believe university should be state funded.</div>
+		<div class="answer-btn-container" id="answers_for_question16">
+			<button class="btn" name="a16" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a16" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a16" value="0">Neutral</button>
+			<button class="btn" name="a16" value="1">Moderately Agree</button>
+			<button class="btn" name="a16" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q17">
+		<div class="question"><br>17) I believe the STEM subjects should receive the most funding.</div>
+		<div class="answer-btn-container" id="answers_for_question17">
+			<button class="btn" name="a17" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a17" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a17" value="0">Neutral</button>
+			<button class="btn" name="a17" value="1">Moderately Agree</button>
+			<button class="btn" name="a17" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q18">
+		<div class="question"><br>18) I believe we should continue creating settlements.</div>
+		<div class="answer-btn-container" id="answers_for_question18">
+			<button class="btn" name="a18" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a18" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a18" value="0">Neutral</button>
+			<button class="btn" name="a18" value="1">Moderately Agree</button>
+			<button class="btn" name="a18" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q19">
+		<div class="question"><br>19) I believe that shops should be allowed to stay open on shabbat without being taxed.</div>
+		<div class="answer-btn-container" id="answers_for_question19">
+			<button class="btn" name="a19" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a19" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a19" value="0">Neutral</button>
+			<button class="btn" name="a19" value="1">Moderately Agree</button>
+			<button class="btn" name="a19" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q20">
+		<div class="question"><br>20) I believe in government sponsored healthcare.</div>
+		<div class="answer-btn-container" id="answers_for_question20">
+			<button class="btn" name="a20" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a20" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a20" value="0">Neutral</button>
+			<button class="btn" name="a20" value="1">Moderately Agree</button>
+			<button class="btn" name="a20" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q21">
+		<div class="question"><br>21) I believe gambling should be legal.</div>
+		<div class="answer-btn-container" id="answers_for_question21">
+			<button class="btn" name="a21" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a21" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a21" value="0">Neutral</button>
+			<button class="btn" name="a21" value="1">Moderately Agree</button>
+			<button class="btn" name="a21" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q22">
+		<div class="question"><br>22) All schools should have the same basic education standards (rather than different standards for religion, public schools, etc.).</div>
+		<div class="answer-btn-container" id="answers_for_question22">
+			<button class="btn" name="a22" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a22" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a22" value="0">Neutral</button>
+			<button class="btn" name="a22" value="1">Moderately Agree</button>
+			<button class="btn" name="a22" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q23">
+		<div class="question"><br>23) I believe we should give back the settlements that already exist.</div>
+		<div class="answer-btn-container" id="answers_for_question23">
+			<button class="btn" name="a23" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a23" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a23" value="0">Neutral</button>
+			<button class="btn" name="a23" value="1">Moderately Agree</button>
+			<button class="btn" name="a23" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q24">
+		<div class="question"><br>24) I believe in separation of state and religion.</div>
+		<div class="answer-btn-container" id="answers_for_question24">
+			<button class="btn" name="a24" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a24" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a24" value="0">Neutral</button>
+			<button class="btn" name="a24" value="1">Moderately Agree</button>
+			<button class="btn" name="a24" value="2">Strongly Agree</button>
+		</div>
+	</div>
+
+	<div class="question-container" id="q25">
+		<div class="question"><br>25) I believe haredim should stop receiving government grants if they do not have employment.</div>
+		<div class="answer-btn-container" id="answers_for_question25">
+			<button class="btn" name="a25" value="-2">Strongly Disagree</button>
+			<button class="btn" name="a25" value="-1">Moderately Disagree</button>
+			<button class="btn active" name="a25" value="0">Neutral</button>
+			<button class="btn" name="a25" value="1">Moderately Agree</button>
+			<button class="btn" name="a25" value="2">Strongly Agree</button>
+		</div>
+	</div>
+	  
+	<button onclick="make_user_answer_array()" id="results">Get Results</button>
+
+	<script src="script.js"></script>
+</body>
+</html>
 
 
+
+
+
+
+<!-- 
 		<p id="question1">1) I believe in a two state solution.</p>
 	  <input type="radio" name= "q1"  value="-2">Strongly Disagree<br>
 	  <input type="radio" name= "q1"  value="-1">Moderately Disagree<br>
@@ -43,19 +328,4 @@
 	  <input type="radio" name= "q5"  value="0">Neutral<br>
 	  <input type="radio" name= "q5"  value="1">Moderately Agree<br>
 	  <input type="radio" name= "q5"  value="2">Strongly Agree<br><br>
-
-
-
-	  
-	  <button onclick="makeAnswerArray()">Get Results</button>
-
-
-
-
-	<div id='questions'></div>
-	<script src="script.js"></script>
-</body>
-</html>
-
-
-
+ -->
