--- a/Week_3/Hackathon/index_survey.html
+++ b/Week_3/Hackathon/index_survey.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>Hackathon</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style_survey.css">
 	<link href="https://fonts.googleapis.com/css?family=Quattrocento&display=swap" rel="stylesheet">
 </head>
 <body>
+
+	<a href="hackathon.html" id="return-home-top">Return Home</a>
 
 	<div class="question-container" id="q1">
 		<div class="question">1) I believe in a two state solution.</div>
@@ -283,8 +285,9 @@
 	</div>
 	  
 	<button onclick="make_user_answer_array()" id="results">Get Results</button>
+	<a href="hackathon.html" id="return-home-bottom">Return Home</a>
 
-	<script src="script.js"></script>
+	<script src="script_survey.js"></script>
 </body>
 </html>
 
@@ -293,7 +296,8 @@
 
 
 
-<!-- 
+<!--    ///// old  ///////
+	
 		<p id="question1">1) I believe in a two state solution.</p>
 	  <input type="radio" name= "q1"  value="-2">Strongly Disagree<br>
 	  <input type="radio" name= "q1"  value="-1">Moderately Disagree<br>
