--- a/Week_3/day_3/exercises/xp_gold_tipcalc/index.html
+++ b/Week_3/day_3/exercises/xp_gold_tipcalc/index.html
@@ -4,7 +4,7 @@
 
   <div id="container">
   <h1>Tip Calculator</h1>
-  <title>Game Javascript</title>
+  <title>Tip Calculator</title>
 </head>
 <body>
     <h3>Explanation of the calculator : the point is to calculate the tip that you have to pay in a restaurant</h3>
