--- a/Week_3/Hackathon/index_survey.html
+++ b/Week_3/Hackathon/index_survey.html
@@ -284,52 +284,16 @@
 		</div>
 	</div>
 	  
-	<button onclick="make_user_answer_array()" id="results">Get Results</button>
+	<!-- <button onclick="make_user_answer_array()" id="results" href="results.html">Get Results</button> -->
+
+	<a id="results" title="Click to do something"
+ href="results.html" onclick="make_user_answer_array()">Get Results</a>
+	
 	<a href="hackathon.html" id="return-home-bottom">Return Home</a>
+
 
 	<script src="script_survey.js"></script>
 </body>
 </html>
 
 
-
-
-
-
-<!--    ///// old  ///////
-	
-		<p id="question1">1) I believe in a two state solution.</p>
-	  <input type="radio" name= "q1"  value="-2">Strongly Disagree<br>
-	  <input type="radio" name= "q1"  value="-1">Moderately Disagree<br>
-	  <input type="radio" name= "q1"  value="0">Neutral<br>
-	  <input type="radio" name= "q1"  value="1">Moderately Agree<br>
-	  <input type="radio" name= "q1"  value="2">Strongly Agree<br><br>
-
-	  <p id="question2">2) I believe there should be public transportation on Shabbat.</p>
-	  <input type="radio" name= "q2"  value="-2">Strongly Disagree<br>
-	  <input type="radio" name= "q2"  value="-1">Moderately Disagree<br>
-	  <input type="radio" name= "q2"  value="0">Neutral<br>
-	  <input type="radio" name= "q2"  value="1">Moderately Agree<br>
-	  <input type="radio" name= "q2"  value="2">Strongly Agree<br><br>
-
-	  <p id="question3">3) I believe in a completely free market.</p>
-	  <input type="radio" name= "q3"  value="-2">Strongly Disagree<br>
-	  <input type="radio" name= "q3"  value="-1">Moderately Disagree<br>
-	  <input type="radio" name= "q3"  value="0">Neutral<br>
-	  <input type="radio" name= "q3"  value="1">Moderately Agree<br>
-	  <input type="radio" name= "q3"  value="2">Strongly Agree<br><br>
-
-	  <p id="question4">4) I believe marijuana should be legal.</p>
-	  <input type="radio" name= "q4"  value="-2">Strongly Disagree<br>
-	  <input type="radio" name= "q4"  value="-1">Moderately Disagree<br>
-	  <input type="radio" name= "q4"  value="0">Neutral<br>
-	  <input type="radio" name= "q4"  value="1">Moderately Agree<br>
-	  <input type="radio" name= "q4"  value="2">Strongly Agree<br><br>
-
-	  <p id="question5">5) I believe all drugs should be legal.</p>
-	  <input type="radio" name= "q5"  value="-2">Strongly Disagree<br>
-	  <input type="radio" name= "q5"  value="-1">Moderately Disagree<br>
-	  <input type="radio" name= "q5"  value="0">Neutral<br>
-	  <input type="radio" name= "q5"  value="1">Moderately Agree<br>
-	  <input type="radio" name= "q5"  value="2">Strongly Agree<br><br>
- -->
