adds final files for hackathon

--- a/Week_3/Hackathon/hackathon.html
+++ b/Week_3/Hackathon/hackathon.html
@@ -115,8 +115,8 @@
   </div>
   <!-- Submit and return info -->
   
-  <button onclick="storeInfo()" type="button" class="btn btn-primary">Begin survey</button>
-  <a href="index_survey.html">Get to survey</a>
+  <button onclick="storeInfo()" type="button" class="btn btn-primary"><a href="index_survey.html" id="begin">Begin survey</a></button>
+  
 </form>
 <script src="hackathon.js"></script>
 </body>
