--- a/Week_3/Hackathon/index_survey.html
+++ b/Week_3/Hackathon/index_survey.html
@@ -283,15 +283,9 @@
 			<button class="btn" name="a25" value="2">Strongly Agree</button>
 		</div>
 	</div>
-	  
-	<!-- <button onclick="make_user_answer_array()" id="results" href="results.html">Get Results</button> -->
-
-	<a id="results" title="Click to do something"
- href="results.html" onclick="make_user_answer_array()">Get Results</a>
 	
-	<a href="hackathon.html" id="return-home-bottom">Return Home</a>
-
-
+ 	<button onclick="make_user_answer_array()" type="button" class="btn btn-primary"><a href="results.html" id="get-results">Get Results</a></button>
+	
 	<script src="script_survey.js"></script>
 </body>
 </html>
