--- a/Week_3/Hackathon/parties.html
+++ b/Week_3/Hackathon/parties.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- Bottstrap, Fonts -->
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quattrocento&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="parties.css">
 	<title> Parties</title>
 </head>
@@ -36,7 +36,7 @@
 	<!-- Container with cards -->
 
 	<div class="container-fluid">
-		<h1>Israel's political parties</h1>
+		<h1>Israel's Political Parties</h1>
 		<div class="row">
 			<div class="col-12 col-md-6 col-lg-3">
 				<div class="card" style="width: 14rem;margin-bottom: 50px;">
@@ -90,7 +90,7 @@
 			</div>
 			<div class="col-12 col-md-6 col-lg-3">
 				<div class="card" style="width: 14rem;margin-bottom: 50px;;">
-					<img class="card-img-top" src="shaas.PNG" alt="Card image cap">
+					<img class="card-img-top" src="Shaas.PNG" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Shas</h5>
 						<p class="card-text">Shas is a Haredi religious political party that primarily represents the interests of Sephardic, and Mizrahi Jews.</p>
@@ -100,7 +100,7 @@
 			</div>
 			<div class="col-12 col-md-6 col-lg-3">
 				<div class="card" style="width: 14rem;margin-bottom: 50px;">
-					<img class="card-img-top" src="Haavodah.PNG" alt="Card image cap">
+					<img class="card-img-top" src="HaAvodah.PNG" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Haavodah/Meretz</h5>
 						<p class="card-text">The Israeli Labor Party, commonly known as HaAvoda, is a social democratic and Zionist political party</p>
