--- a/Week_3/Hackathon/results.html
+++ b/Week_3/Hackathon/results.html
@@ -27,10 +27,11 @@
            </div>
   </nav>
         <div id="overlay">
+        <br>
         <h1>Congratulations!</h1><br>
-        <h2>Here are your results!</h2><hr>
-        <h3>Your views most align with: </h3>
-        <p id="winning-answer"></p>
+        <h2>Your views most aligned with: </h2> <br>
+        <h1 id="winning-answer"></h1> <br>
+        <h3>For more information on your party match, as well as all political parties, <br><a id="party-link" href="parties.html">click here</a></h3>
         </div>
 
         <script src="script_survey.js"></script>
