--- a/Week_1/day_4/exercise/wwv3/index.html
+++ b/Week_1/day_4/exercise/wwv3/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html>
 <head>
-	<title>Daily Challenge - Wild Wacky Vegetables</title>
+	<title>Wild Wacky Vegetables</title>
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
 	<link rel="stylesheet" type="text/css" href="style.css">
